# bp_aws_lambda_python_serverless-fw

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  config.py  handler.py  makefile  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  serverless.yml
.github/workflows/: deploy.yaml
tests/: test_handler.py
